Added extra content

--- a/modules/user/pioneer/templates/home/component.html
+++ b/modules/user/pioneer/templates/home/component.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title></title>
+    <title>{{page.properties.title}}</title>
   </head>
   <body>
-    Hello World Template
+    {{page.properties.body}}
   </body>
 </html>
