Implemented simple web component include

--- a/modules/user/pioneer/templates/home/index.html
+++ b/modules/user/pioneer/templates/home/index.html
@@ -4,5 +4,7 @@
   </head>
   <body>
     {{page.properties.body}}
+
+    {{ceibaInclude path="article"  ctype="/modules/user/pioneer/components/article"}}
   </body>
 </html>
