--- a/modules/user/pioneer/templates/home/index.html
+++ b/modules/user/pioneer/templates/home/index.html
@@ -1,10 +1,16 @@
 <html>
   <head>
     <title>{{page.properties.title}}</title>
+    <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    {{page.properties.body}}
-
-    {{ceibaInclude path="article"  ctype="/modules/user/pioneer/components/article"}}
+    <div class="container">
+      <div class="row">
+          {{ceibaInclude path="header"  ctype="/modules/user/pioneer/components/header"}}
+          {{ceibaInclude path="leftmenu"  ctype="/modules/user/pioneer/components/leftmenu"}}
+          {{ceibaInclude path="article"  ctype="/modules/user/pioneer/components/article"}}
+      </div>
+    </div>
+          {{ceibaInclude path="footer"  ctype="/modules/user/pioneer/components/footer"}}
   </body>
 </html>
